[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/scenes/levels/ice_cap_adventure/ice_03.gd" type="Script" id=1]
[ext_resource path="res://titles/tiles_all.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/levels/Ice_Cap_Adventure/Ice_Cap_Adventure.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/parllax_bg_3.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/next_level.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://dlcs/dlc_2/Drum & Bass.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.833, 53.9316 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4321.75, 130.397 )

[node name="ice_cap3" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 393216, 69, 0, 393217, 536870982, 0, 393218, 536870982, 0, 393219, 536870982, 0, 393220, 536870982, 0, 393221, 536870982, 0, 393222, 536870982, 0, 393223, 536870982, 0, 393224, 536870982, 0, 393225, 536870982, 0, 393226, 536870982, 0, 393227, 536870982, 0, 393228, 536870982, 0, 393229, 536870982, 0, 393230, 536870982, 0, 393231, 536870982, 0, 393232, 536870981, 0, 524305, 69, 0, 524306, 70, 0, 524307, 70, 0, 524308, 70, 0, 524309, 536870981, 0, 720915, 69, 0, 720916, 70, 0, 720917, 70, 0, 720918, 70, 0, 720919, 70, 0, 720920, 536870981, 0, 917527, 69, 0, 917528, 70, 0, 917529, 70, 0, 917530, 70, 0, 917531, 70, 0, 917532, 70, 0, 917533, 536870983, 0, 1048605, 71, 0, 1048606, 536870984, 0, 1114142, 536870991, 0, 1114143, 536870984, 0, 1179678, 536870989, 0, 1179679, 536870991, 0, 1179680, 536870984, 0, 1245214, 536870989, 0, 1245215, 536870989, 0, 1245216, 536870991, 0, 1245217, 536870984, 0, 1245324, 536870989, 0, 1245325, 536870989, 0, 1245326, 536870989, 0, 1245327, 536870989, 0, 1245328, 536870989, 0, 1245329, 536870989, 0, 1245330, 536870989, 0, 1245331, 536870989, 0, 1245332, 536870989, 0, 1245333, 536870989, 0, 1245334, 536870989, 0, 1245335, 536870989, 0, 1245336, 536870989, 0, 1245337, 536870989, 0, 1310750, 536870989, 0, 1310751, 536870989, 0, 1310752, 536870989, 0, 1310753, 536870991, 0, 1310754, 536870984, 0, 1310860, 536870989, 0, 1310861, 536870989, 0, 1310862, 536870989, 0, 1310863, 536870989, 0, 1310864, 536870989, 0, 1310865, 536870989, 0, 1310866, 536870989, 0, 1310867, 536870989, 0, 1310868, 536870989, 0, 1310869, 536870989, 0, 1310870, 536870989, 0, 1310871, 536870989, 0, 1310872, 536870989, 0, 1310873, 536870989, 0, 1376286, 536870989, 0, 1376287, 536870989, 0, 1376288, 536870989, 0, 1376289, 536870989, 0, 1376290, 536870991, 0, 1376291, 536870983, 0, 1376396, 536870989, 0, 1376397, 536870989, 0, 1376398, 536870989, 0, 1376399, 536870989, 0, 1376400, 536870989, 0, 1376401, 536870989, 0, 1376402, 536870989, 0, 1376403, 536870989, 0, 1376404, 536870989, 0, 1376405, 536870989, 0, 1376406, 536870989, 0, 1376407, 536870989, 0, 1376408, 536870989, 0, 1376409, 536870989, 0, 1441822, 536870989, 0, 1441823, 536870989, 0, 1441824, 536870989, 0, 1441825, 536870989, 0, 1441826, 536870989, 0, 1441932, 536870989, 0, 1441933, 536870989, 0, 1441934, 536870989, 0, 1441935, 536870989, 0, 1441936, 536870989, 0, 1441937, 536870989, 0, 1441938, 536870989, 0, 1441939, 536870989, 0, 1441940, 536870989, 0, 1441941, 536870989, 0, 1441942, 536870989, 0, 1441943, 536870989, 0, 1441944, 536870989, 0, 1441945, 536870989, 0, 1507358, 536870989, 0, 1507359, 536870989, 0, 1507360, 536870989, 0, 1507361, 536870989, 0, 1507362, 536870989, 0, 1507468, 536870989, 0, 1507469, 536870989, 0, 1507470, 536870989, 0, 1507471, 536870989, 0, 1507472, 536870989, 0, 1507473, 536870989, 0, 1507474, 536870989, 0, 1507475, 536870989, 0, 1507476, 536870989, 0, 1507477, 536870989, 0, 1507478, 536870989, 0, 1507479, 536870989, 0, 1507480, 536870989, 0, 1507481, 536870989, 0, 1572894, 536870989, 0, 1572895, 536870989, 0, 1572896, 536870989, 0, 1572897, 536870989, 0, 1572898, 536870989, 0, 1572990, 69, 0, 1572991, 70, 0, 1572992, 70, 0, 1572993, 70, 0, 1572994, 70, 0, 1572995, 70, 0, 1572996, 70, 0, 1572997, 70, 0, 1572998, 536870981, 0, 1573004, 536870989, 0, 1573005, 536870989, 0, 1573006, 536870989, 0, 1573007, 536870989, 0, 1573008, 536870989, 0, 1573009, 536870989, 0, 1573010, 536870989, 0, 1573011, 536870989, 0, 1573012, 536870989, 0, 1573013, 536870989, 0, 1573014, 536870989, 0, 1573015, 536870989, 0, 1573016, 536870989, 0, 1573017, 536870989, 0, 1638430, 536870989, 0, 1638431, 536870989, 0, 1638432, 536870989, 0, 1638433, 536870989, 0, 1638434, 536870989, 0, 1638519, 69, 0, 1638520, 70, 0, 1638521, 70, 0, 1638522, 70, 0, 1638523, 70, 0, 1638524, 70, 0, 1638525, 536870981, 0, 1638540, 536870989, 0, 1638541, 536870989, 0, 1638542, 536870989, 0, 1638543, 536870989, 0, 1638544, 536870989, 0, 1638545, 536870989, 0, 1638546, 536870989, 0, 1638547, 536870989, 0, 1638548, 536870989, 0, 1638549, 536870989, 0, 1638550, 536870989, 0, 1638551, 536870989, 0, 1638552, 536870989, 0, 1638553, 536870989, 0, 1703966, 536870989, 0, 1703967, 536870989, 0, 1703968, 536870989, 0, 1703969, 536870989, 0, 1703970, 536870989, 0, 1704054, 73, 0, 1704085, 536870989, 0, 1704086, 536870989, 0, 1704087, 536870989, 0, 1704088, 536870989, 0, 1704089, 536870989, 0, 1769502, 536870989, 0, 1769503, 536870989, 0, 1769504, 536870989, 0, 1769505, 536870989, 0, 1769506, 536870989, 0, 1769573, 69, 0, 1769574, 70, 0, 1769575, 70, 0, 1769576, 70, 0, 1769577, 70, 0, 1769578, 536870981, 0, 1769586, 69, 0, 1769587, 70, 0, 1769588, 70, 0, 1769589, 536870981, 0, 1769621, 536870989, 0, 1769622, 536870989, 0, 1769623, 536870989, 0, 1769624, 536870989, 0, 1769625, 536870989, 0, 1835038, 536870989, 0, 1835039, 536870989, 0, 1835040, 536870989, 0, 1835041, 536870989, 0, 1835042, 536870989, 0, 1835043, 536870984, 0, 1835108, 73, 0, 1835115, 73, 0, 1835121, 73, 0, 1835141, 69, 0, 1835142, 70, 0, 1835143, 70, 0, 1835144, 536870983, 0, 1835148, 71, 0, 1835149, 536870982, 0, 1835150, 536870982, 0, 1835151, 536870982, 0, 1835152, 536870982, 0, 1835153, 536870982, 0, 1835154, 536870982, 0, 1835155, 536870982, 0, 1835156, 536870982, 0, 1835157, 536870989, 0, 1835158, 536870989, 0, 1835159, 536870989, 0, 1835160, 536870989, 0, 1835161, 536870989, 0, 1900574, 536870989, 0, 1900575, 536870989, 0, 1900576, 536870989, 0, 1900577, 536870989, 0, 1900578, 536870989, 0, 1900579, 536870991, 0, 1900580, 536870982, 0, 1900581, 536870982, 0, 1900582, 536870982, 0, 1900583, 536870982, 0, 1900584, 536870982, 0, 1900585, 536870982, 0, 1900586, 536870984, 0, 1900638, 69, 0, 1900639, 70, 0, 1900640, 70, 0, 1900641, 70, 0, 1900642, 70, 0, 1900643, 536870981, 0, 1900652, 69, 0, 1900653, 70, 0, 1900654, 70, 0, 1900655, 70, 0, 1900656, 536870981, 0, 1900685, 536870989, 0, 1900686, 536870989, 0, 1900687, 536870989, 0, 1900688, 536870989, 0, 1900689, 536870989, 0, 1900690, 536870989, 0, 1900691, 536870989, 0, 1900692, 536870989, 0, 1900693, 536870989, 0, 1900694, 536870989, 0, 1900695, 536870989, 0, 1900696, 536870989, 0, 1900697, 536870989, 0, 1966110, 536870989, 0, 1966111, 536870989, 0, 1966112, 536870989, 0, 1966113, 536870989, 0, 1966114, 536870989, 0, 1966115, 536870989, 0, 1966116, 536870989, 0, 1966117, 536870989, 0, 1966118, 536870989, 0, 1966119, 536870989, 0, 1966120, 536870989, 0, 1966121, 536870989, 0, 1966122, 536870991, 0, 1966123, 536870984, 0, 1966173, 73, 0, 1966218, 68, 0, 1966221, 536870989, 0, 1966222, 536870989, 0, 1966223, 536870989, 0, 1966224, 536870989, 0, 1966225, 536870989, 0, 1966226, 536870989, 0, 1966227, 536870989, 0, 1966228, 536870989, 0, 1966229, 536870989, 0, 1966230, 536870989, 0, 1966231, 536870989, 0, 1966232, 536870989, 0, 1966233, 536870989, 0, 2031646, 536870989, 0, 2031647, 536870989, 0, 2031648, 536870989, 0, 2031649, 536870989, 0, 2031650, 536870989, 0, 2031651, 536870989, 0, 2031652, 536870989, 0, 2031653, 536870989, 0, 2031654, 536870989, 0, 2031655, 536870989, 0, 2031656, 536870989, 0, 2031657, 536870989, 0, 2031658, 536870989, 0, 2031659, 536870991, 0, 2031660, 536870984, 0, 2031703, 69, 0, 2031704, 70, 0, 2031705, 70, 0, 2031706, 70, 0, 2031707, 70, 0, 2031708, 536870981, 0, 2031757, 536870989, 0, 2031758, 536870989, 0, 2031759, 536870989, 0, 2031760, 536870989, 0, 2031761, 536870989, 0, 2031762, 536870989, 0, 2031763, 536870989, 0, 2031764, 536870989, 0, 2031765, 536870989, 0, 2031766, 536870989, 0, 2031767, 536870989, 0, 2031768, 536870989, 0, 2031769, 536870989, 0, 2097182, 536870989, 0, 2097183, 536870989, 0, 2097184, 536870989, 0, 2097185, 536870989, 0, 2097186, 536870989, 0, 2097187, 536870989, 0, 2097188, 536870989, 0, 2097189, 536870989, 0, 2097190, 536870989, 0, 2097191, 536870989, 0, 2097192, 536870989, 0, 2097193, 536870989, 0, 2097194, 536870989, 0, 2097195, 536870989, 0, 2097196, 536870991, 0, 2097197, 536870984, 0, 2097238, 73, 0, 2097292, 71, 0, 2097293, 536870989, 0, 2097294, 536870989, 0, 2097295, 536870989, 0, 2097296, 536870989, 0, 2097297, 536870989, 0, 2097298, 536870989, 0, 2097299, 536870989, 0, 2097300, 536870989, 0, 2097301, 536870989, 0, 2097302, 536870989, 0, 2097303, 536870989, 0, 2097304, 536870989, 0, 2097305, 536870989, 0, 2162718, 536870989, 0, 2162719, 536870989, 0, 2162720, 536870989, 0, 2162721, 536870989, 0, 2162722, 536870989, 0, 2162723, 536870989, 0, 2162724, 536870989, 0, 2162725, 536870989, 0, 2162726, 536870989, 0, 2162727, 536870989, 0, 2162728, 536870989, 0, 2162729, 536870989, 0, 2162730, 536870989, 0, 2162731, 536870989, 0, 2162732, 536870989, 0, 2162733, 536870991, 0, 2162734, 536870984, 0, 2162768, 69, 0, 2162769, 70, 0, 2162770, 70, 0, 2162771, 70, 0, 2162772, 70, 0, 2162773, 536870981, 0, 2162829, 536870989, 0, 2162830, 536870989, 0, 2162831, 536870989, 0, 2162832, 536870989, 0, 2162833, 536870989, 0, 2162834, 536870989, 0, 2162835, 536870989, 0, 2162836, 536870989, 0, 2162837, 536870989, 0, 2162838, 536870989, 0, 2162839, 536870989, 0, 2162840, 536870989, 0, 2162841, 536870989, 0, 2228254, 536870989, 0, 2228255, 536870989, 0, 2228256, 536870989, 0, 2228257, 536870989, 0, 2228258, 536870989, 0, 2228259, 536870989, 0, 2228260, 536870989, 0, 2228261, 536870989, 0, 2228262, 536870989, 0, 2228263, 536870989, 0, 2228264, 536870989, 0, 2228265, 536870989, 0, 2228266, 536870989, 0, 2228267, 536870989, 0, 2228268, 536870989, 0, 2228269, 536870989, 0, 2228270, 536870991, 0, 2228271, 536870982, 0, 2228272, 536870982, 0, 2228273, 536870982, 0, 2228274, 536870982, 0, 2228275, 536870982, 0, 2228276, 536870982, 0, 2228277, 536870982, 0, 2228278, 536870982, 0, 2228279, 536870982, 0, 2228280, 536870981, 0, 2228283, 69, 0, 2228284, 70, 0, 2228285, 70, 0, 2228286, 70, 0, 2228287, 70, 0, 2228288, 536870981, 0, 2228291, 69, 0, 2228292, 70, 0, 2228293, 70, 0, 2228294, 70, 0, 2228295, 536870981, 0, 2228298, 69, 0, 2228299, 70, 0, 2228300, 70, 0, 2228301, 70, 0, 2228302, 536870981, 0, 2228362, 68, 0, 2228365, 536870989, 0, 2228366, 536870989, 0, 2228367, 536870989, 0, 2228368, 536870989, 0, 2228369, 536870989, 0, 2228370, 536870989, 0, 2228371, 536870989, 0, 2228372, 536870989, 0, 2228373, 536870989, 0, 2228374, 536870989, 0, 2228375, 536870989, 0, 2228376, 536870989, 0, 2228377, 536870989, 0, 2293790, 536870989, 0, 2293791, 536870989, 0, 2293792, 536870989, 0, 2293793, 536870989, 0, 2293794, 536870989, 0, 2293795, 536870989, 0, 2293796, 536870989, 0, 2293797, 536870989, 0, 2293798, 536870989, 0, 2293799, 536870989, 0, 2293800, 536870989, 0, 2293801, 536870989, 0, 2293802, 536870989, 0, 2293803, 536870989, 0, 2293804, 536870989, 0, 2293805, 536870989, 0, 2293806, 536870989, 0, 2293807, 536870989, 0, 2293808, 536870989, 0, 2293809, 536870989, 0, 2293810, 536870989, 0, 2293811, 536870989, 0, 2293812, 536870989, 0, 2293813, 536870989, 0, 2293814, 536870989, 0, 2293815, 536870989, 0, 2293901, 536870989, 0, 2293902, 536870989, 0, 2293903, 536870989, 0, 2293904, 536870989, 0, 2293905, 536870989, 0, 2293906, 536870989, 0, 2293907, 536870989, 0, 2293908, 536870989, 0, 2293909, 536870989, 0, 2293910, 536870989, 0, 2293911, 536870989, 0, 2293912, 536870989, 0, 2293913, 536870989, 0, 2359326, 536870989, 0, 2359327, 536870989, 0, 2359328, 536870989, 0, 2359329, 536870989, 0, 2359330, 536870989, 0, 2359331, 536870989, 0, 2359332, 536870989, 0, 2359333, 536870989, 0, 2359334, 536870989, 0, 2359335, 536870989, 0, 2359336, 536870989, 0, 2359337, 536870989, 0, 2359338, 536870989, 0, 2359339, 536870989, 0, 2359340, 536870989, 0, 2359341, 536870989, 0, 2359342, 536870989, 0, 2359343, 536870989, 0, 2359344, 536870989, 0, 2359345, 536870989, 0, 2359346, 536870989, 0, 2359347, 536870989, 0, 2359348, 536870989, 0, 2359349, 536870989, 0, 2359350, 536870989, 0, 2359351, 536870989, 0, 2359436, 71, 0, 2359437, 536870989, 0, 2359438, 536870989, 0, 2359439, 536870989, 0, 2359440, 536870989, 0, 2359441, 536870989, 0, 2359442, 536870989, 0, 2359443, 536870989, 0, 2359444, 536870989, 0, 2359445, 536870989, 0, 2359446, 536870989, 0, 2359447, 536870989, 0, 2359448, 536870989, 0, 2359449, 536870989, 0, 2424862, 536870989, 0, 2424863, 536870989, 0, 2424864, 536870989, 0, 2424865, 536870989, 0, 2424866, 536870989, 0, 2424867, 536870989, 0, 2424868, 536870989, 0, 2424869, 536870989, 0, 2424870, 536870989, 0, 2424871, 536870989, 0, 2424872, 536870989, 0, 2424873, 536870989, 0, 2424874, 536870989, 0, 2424875, 536870989, 0, 2424876, 536870989, 0, 2424877, 536870989, 0, 2424878, 536870989, 0, 2424879, 536870989, 0, 2424880, 536870989, 0, 2424881, 536870989, 0, 2424882, 536870989, 0, 2424883, 536870989, 0, 2424884, 536870989, 0, 2424885, 536870989, 0, 2424886, 536870989, 0, 2424887, 536870989, 0, 2424973, 536870989, 0, 2424974, 536870989, 0, 2424975, 536870989, 0, 2424976, 536870989, 0, 2424977, 536870989, 0, 2424978, 536870989, 0, 2424979, 536870989, 0, 2424980, 536870989, 0, 2424981, 536870989, 0, 2424982, 536870989, 0, 2424983, 536870989, 0, 2424984, 536870989, 0, 2424985, 536870989, 0, 2490423, 77, 0, 2490503, 71, 0, 2490504, 70, 0, 2490505, 70, 0, 2490506, 70, 0, 2490507, 70, 0, 2490508, 70, 0, 2490509, 536870989, 0, 2490510, 536870989, 0, 2490511, 536870989, 0, 2490512, 536870989, 0, 2490513, 536870989, 0, 2490514, 536870989, 0, 2490515, 536870989, 0, 2490516, 536870989, 0, 2490517, 536870989, 0, 2490518, 536870989, 0, 2490519, 536870989, 0, 2490520, 536870989, 0, 2490521, 536870989, 0, 2555959, 77, 0, 2556047, 536870989, 0, 2556048, 536870989, 0, 2556049, 536870989, 0, 2556050, 536870989, 0, 2556051, 536870989, 0, 2556052, 536870989, 0, 2556053, 536870989, 0, 2556054, 536870989, 0, 2556055, 536870989, 0, 2556056, 536870989, 0, 2556057, 536870989, 0, 2621495, 77, 0, 2621562, 71, 0, 2621563, 70, 0, 2621564, 70, 0, 2621565, 70, 0, 2621566, 70, 0, 2621567, 70, 0, 2621568, 70, 0, 2621569, 70, 0, 2621570, 70, 0, 2621571, 70, 0, 2621572, 70, 0, 2621573, 70, 0, 2621574, 70, 0, 2621575, 536870983, 0, 2621585, 536870989, 0, 2621586, 536870989, 0, 2621587, 536870989, 0, 2621588, 536870989, 0, 2621589, 536870989, 0, 2621590, 536870989, 0, 2621591, 536870989, 0, 2621592, 536870989, 0, 2621593, 536870989, 0, 2687031, 77, 0, 2687032, 70, 0, 2687033, 70, 0, 2687034, 70, 0, 2687037, 71, 0, 2687038, 70, 0, 2687039, 70, 0, 2687040, 70, 0, 2687041, 536870983, 0, 2687045, 71, 0, 2687046, 70, 0, 2687047, 70, 0, 2687048, 70, 0, 2687049, 70, 0, 2687050, 536870982, 0, 2687051, 536870983, 0, 2687054, 71, 0, 2687055, 70, 0, 2687056, 70, 0, 2687057, 70, 0, 2687058, 70, 0, 2687059, 70, 0, 2687060, 536870983, 0, 2687063, 71, 0, 2687064, 70, 0, 2687065, 70, 0, 2687066, 70, 0, 2687067, 70, 0, 2687068, 70, 0, 2687069, 70, 0, 2687070, 536870983, 0, 2687072, 71, 0, 2687073, 70, 0, 2687074, 70, 0, 2687075, 70, 0, 2687076, 70, 0, 2687077, 70, 0, 2687078, 70, 0, 2687079, 536870983, 0, 2687082, 71, 0, 2687083, 70, 0, 2687084, 70, 0, 2687085, 70, 0, 2687086, 70, 0, 2687087, 70, 0, 2687088, 70, 0, 2687089, 70, 0, 2687090, 536870983, 0, 2687092, 71, 0, 2687093, 70, 0, 2687094, 70, 0, 2687095, 70, 0, 2687096, 70, 0, 2687097, 536870983, 0, 2687124, 536870989, 0, 2687125, 536870989, 0, 2687126, 536870989, 0, 2687127, 536870989, 0, 2687128, 536870989, 0, 2687129, 536870989, 0, 2752662, 536870989, 0, 2752663, 536870989, 0, 2752664, 536870989, 0, 2752665, 536870989, 0 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 430.371, 184.091 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="parallax_bg" parent="." instance=ExtResource( 5 )]

[node name="next_level" parent="." instance=ExtResource( 6 )]
position = Vector2( 9012.46, 1725.33 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 9089.72, 1704.32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -15.6748, 21.375 )
shape = SubResource( 1 )

[node name="coins" type="Node" parent="."]

[node name="coin" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 1112.57, 477.731 )

[node name="coin2" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 1212, 477.731 )

[node name="coin3" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 1312, 477.731 )

[node name="coin4" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 1315.21, 666.9 )

[node name="coin5" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 1415, 666.9 )

[node name="coin6" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 1515, 666.9 )

[node name="coin7" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 2265.26, 1317.77 )

[node name="coin8" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 2339.01, 1808.32 )

[node name="coin9" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 2439, 1808.32 )

[node name="coin10" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 2539, 1808.32 )

[node name="coin11" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 2639, 1808.32 )

[node name="coin12" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 6944.46, 1824.62 )

[node name="coin13" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 7044, 1824.62 )

[node name="coin14" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 7144, 1824.62 )

[node name="coin15" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 7265.38, 1792.56 )

[node name="enemies" type="Node" parent="."]
editor/display_folded = true

[node name="enemy" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 1506.94, 822.937 )

[node name="enemy2" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 3379.39, 1464.19 )

[node name="enemy3" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 3105.79, 1983.6 )

[node name="enemy4" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 4448.14, 2037.04 )

[node name="enemy5" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 5670.79, 1917.34 )

[node name="enemy6" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 6701.06, 1677.94 )

[node name="enemy7" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 8165.25, 1472.74 )

[node name="enemy8" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 8744.51, 1724.96 )

[node name="enemy9" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 7087.17, 477.687 )

[node name="enemy10" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 5310.24, 580.203 )

[node name="enemy11" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 4660.97, 631.461 )

[node name="enemy12" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 5173.55, 2288.8 )

[node name="enemy13" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 7138.43, 2322.97 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 4440.25, 2698.06 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 21.6421, 158.709 )
shape = SubResource( 2 )

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
